--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mongoose": "^6.0.12",
     "node-fetch": "^3.3.1"
   },
-  "name": "Nub-Bot",
+  "name": "nub-bot",
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
