--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "canvacord": "^5.4.8",
     "captcha-canvas": "^3.2.1",
     "cpu-stat": "^2.0.1",
+    "discord-arts": "^0.5.8",
     "discord-gamecord": "^4.3.0",
     "discord-giveaways": "^6.0.1",
     "discord-html-transcripts": "^3.1.4",
